# plutus-halo2-verifier-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  note.md  profile.sh
.github/workflows/: continuous-integration.yml  rust-lints.yml  rust-tests.yml
aiken-verifier/: Cargo.toml
aiken-verifier/aiken_halo2/: README.md  aiken.toml  verifier.ak
aiken-verifier/aiken_halo2/lib/: bls_utils.ak  constants_budget_check.ak  gates.ak  gates_test.ak  halo2_kzg.ak  inner_product.ak  lagrange.ak  omega_rotations.ak  transcript.ak
aiken-verifier/aiken_halo2/validators/: verifier.ak
aiken-verifier/src/: api.rs  main.rs  utils.rs
aiken-verifier/submitter/: Cargo.toml  README.md
aiken-verifier/submitter/src/: api.rs  main.rs  utils.rs
aiken-verifier/templates/: gates_test.hbs  profiler.hbs  verification.hbs  verification_gwc19.hbs  verification_h2.hbs  vk_constants.hbs
examples/: atms.rs  atms_multiopen.rs  atms_with_lookups.rs  atms_with_lookups_multiopen.rs  equations_test.rs  lookup_table.rs  lookup_table_multiopen.rs  simple_mul.rs  simple_mul_multiopen.rs  utils.rs
plinth-verifier/plutus-halo2/: plutus-halo2.cabal
plinth-verifier/plutus-halo2/src/Plutus/Crypto/: BlsUtils.hs  Constants.hs  Halo2.hs  Orphans.hs
plinth-verifier/plutus-halo2/src/Plutus/Crypto/Halo2/: ApplicativeParser.hs  GwcMultiOpenMSM.hs  Halo2MultiOpenMSM.hs  LagrangePolynomialEvaluation.hs  MSMEval.hs  Transcript.hs
plinth-verifier/plutus-halo2/test/Generic/: Proof.hs  VerifyCompiled.hs
plinth-verifier/templates/: verification_halo2_kzg.hbs  vk_constants.hbs
plutus-verifier/: cabal.project  verification.hbs  verification_multiopen.hbs  vk_constants.hbs
plutus-verifier/plutus-halo2/: VerifierScript.flat  plutus-halo2.cabal
plutus-verifier/plutus-halo2/src/Plutus/Crypto/: BlsTypes.hs  BlsUtils.hs  Constants.hs  Halo2.hs  VKType.hs
plutus-verifier/plutus-halo2/src/Plutus/Crypto/Halo2/: ApplicativeParser.hs  CompressUncompress.hs  GwcMultiOpenMSM.hs  Halo2MultiOpenMSM.hs  LagrangePolynomialEvaluation.hs  MSMTH.hs  MSMTypes.hs  MultiOpenMSM.hs  MultiopenMSM.hs  Proof.hs  Transcript.hs
plutus-verifier/plutus-halo2/test/: Benchmarks.hs  EvalUtils.hs  Halo2MultiOpenMSM.hs  Lagrange.hs  MultiOpenMSM.hs  ProofData.hs  Test.hs
plutus-verifier/plutus-halo2/test/Generic/: VerificationTestHaskell.hs  VerificationTestPlutus.hs  VerifyCompiled.hs  serialized_proof.hex
plutus-verifier/templates/: verification.hbs  verification_gwc19_kzg.hbs  verification_halo2_kzg.hbs  vk_constants.hbs
profiling_setup/: .gitignore  README.md  profiling.sh  unit.flat
src/: circuit.rs  kzg_params.rs  lib.rs  main.rs
src/circuits/: atms_circuit.rs  atms_with_lookups_circuit.rs  lookup_table_circuit.rs  mod.rs  simple_mul_circuit.rs
src/code_gen/: code_emitters.rs  code_emmiters.rs  mod.rs
src/code_gen/adjusted_types/: mod.rs
src/code_gen/extraction/: data.rs  mod.rs  utils.rs
src/example_circuits/: atms_circuit.rs  atms_with_lookups_circuit.rs  lookup_table_circuit.rs  mod.rs
src/plutus_gen/: code_emitters.rs  code_emitters_aiken.rs  code_emitters_plinth.rs  code_emitters_plutus.rs  mod.rs  proof_serialization.rs  public_inputs_export.rs
src/plutus_gen/adjusted_types/: mod.rs
src/plutus_gen/emitters/: aiken.rs  plinth.rs
src/plutus_gen/extraction/: data.rs  mod.rs  utils.rs
src/plutus_gen/extraction/data/: circuit_expressions.rs  circuit_representation.rs  commitment.rs  commitment_data.rs  constants.rs  evaluation.rs  expression.rs  instantiation_data.rs  mod.rs  proof_step.rs  query.rs  rotation_description.rs
src/plutus_gen/extraction/data/expression_steps/: mod.rs  permutation.rs  proof.rs  vanishing.rs
src/plutus_gen/extraction/data/languages/: aiken.rs  mod.rs  plinth.rs
src/plutus_gen/extraction/languages/: mod.rs
src/plutus_gen/extraction/languages/aiken/: data.rs  emitter.rs  mod.rs
src/plutus_gen/extraction/languages/plinth/: data.rs  emitter.rs  mod.rs
src/plutus_gen/extraction/pcs/: kzg.rs
