[package]
name = "plutus-halo2-verifier-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/input-output-hk/halo2", rev = "0bca06e58937fbe213a0530ecac9d8e0fed501d6", features = ["plutus_debug"] }
atms-halo2 = { git = "https://github.com/input-output-hk/sidechains-zk/", package = "atms-halo2" }
halo2curves = { version = "0.7.0" }
blstrs = { git = "https://github.com/davidnevadoc/blstrs", rev = "3dfe5bf" }

ff = "0.13.0"
serde_json = "1.0.113"
blake2b_simd = "1.0.2"
handlebars = "6.1.0"
itertools = "0.14.0"
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11.5"
rand_core = { package = "rand_core", version = "0.6.4" }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3.1"
