[package]
name = "cardhalo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
group = "0.13"
ff = "0.13.0"
serde_json = "1.0.113"
blake2b_simd = "1.0.2"
handlebars = "6.1.0"
itertools = "0.14.0"
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11.5"
rand_core = { package = "rand_core", version = "0.6.4" }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3.1"
anyhow = "1.0.100"
atms-halo2 = { git = "https://github.com/rrtoledo/sidechains-zk", package = "atms-halo2" }
midnight-proofs = "0.7.0"
midnight-curves = "0.2.0"

[features]
plutus_debug = []