[package]
name = "aiken-transactions-middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
cardano-serialization-lib = "15.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
ciborium = "0.2"
dotenvy = "0.15.7"
log = "0.4.28"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
env_logger = "0.5.10"
