[package]
name = "submitter"
version = "0.1.0"
edition = "2024"

[dependencies]
cardano-serialization-lib = "15.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
dotenvy = "0.15.7"
log = "0.4.28"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
env_logger = "0.11.8"
anyhow = "1.0.100"
blake2b_simd = "1.0.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
